--- a/basic_notes/warming_up.ipynb
+++ b/basic_notes/warming_up.ipynb
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting the return of a stock \n",
+    "## Key Factors for Evaluating the Performance of a Portfolio\n",
     "\n",
     "The __daily return__ of a stock is easily computable as it follows  $$dr(t)=\\frac{P(t)}{P(t-1)}-1$$\n",
     "Similarly, the __cumulative return__ of a stock  is easily computable as it follows $$cr(t)=\\frac{P(t)}{P(0)}-1$$\n",
@@ -174,7 +174,15 @@
     "\n",
     "We take the __adjusted close price__ \n",
     "(see [What Hedge Funds Really Do](https://www.amazon.com/What-Hedge-Funds-Really-Introduction-ebook/dp/B00MYFT0TQ#nav-subnav)\n",
-    "to understand why).                                     \n",
+    "to understand why).     \n",
+    " \n",
+    "Typically for evaluating the performance of a portfolio key factors to focus on are \n",
+    "1. __Cumulative return__ \n",
+    "2. __Average daily return__ \n",
+    "3. __Rsk__ (Standard deviation of daily return)\n",
+    "4. __Sharpe ratio__ \n",
+    " \n",
+    "We will see how to compute and plot these factors. \n",
     "   \n",
     " \n",
     "### Get financial data \n",
@@ -974,13 +982,239 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sharpe Ratio\n",
+    "[Sharpe ratio](https://en.wikipedia.org/wiki/Sharpe_ratio) is a \n",
+    "way to examine the performance of an investment by adjusting for its risk. The ratio measures the excess \n",
+    "return (or risk premium) per unit of deviation in an investment asset or a trading strategy, typically \n",
+    "referred to as risk (and is a deviation risk measure), named after William F. Sharpe.\n",
+    "\n",
+    "The __ex-ante Sharpe ratio__ is defined as:\n",
+    "    $$S=\\frac{E\\{R_p-R_f\\}}{Std\\{R_p-R_f\\}}$$\n",
+    "    \n",
+    "where $R_p$ is the asset return, $R_f$ is the return on a benchmark asset, \n",
+    "such as the risk free rate of return. $E\\{R_p-R_f\\}$ is the expected value of the excess of the asset return \n",
+    "over the benchmark return, and $Std\\{R_p-R_f\\}$ is the standard deviation of the asset return.\n",
+    "\n",
+    "The __ex-post Sharpe ratio__ uses the same equation as the one above but with \n",
+    "realized returns of the asset and benchmark rather than expected returns.\n",
+    "\n",
+    "Examples of __risk free rates__ are \n",
+    "* [LIBOR](https://en.wikipedia.org/wiki/Libor)\n",
+    "* Interest rate of 3 month treasury bill \n",
+    "* 0% (approximation used a lot in last years)\n",
+    "\n",
+    "Using __daily returns__ as $R_p$  the __ex-post Sharpe ratio__ is computable as:\n",
+    "    $$S=\\frac{mean\\{R_p^{daily}-R_f^{daily}\\}}{Std\\{R_p^{daily}\\}}$$\n",
+    "    \n",
+    "as $R_f^{daily}$ is typically costant for several months it is possible to remove from the denominator. \n",
+    "Also, $R_f^{daily}$ is typically approximable with 0% but it is possible to compute given $R_f^{yearly}$ as \n",
+    "it follows remembering there are 252 trading days in a year\n",
+    "\n",
+    "$$R_f^{daily}=\\sqrt[252]{1+R_f^{yearly}}$$\n",
+    "\n",
+    "Sharpe ratio is typically an annual measure. This means if we are using different sample frequencies \n",
+    "need to apply the following formula:\n",
+    "    $$S^{annual}=\\sqrt[2]{SPY} \\times S$$\n",
+    "    \n",
+    "where $SPR$ is the number of samples per year considered in computing $S$, e.g. \n",
+    "\n",
+    "* $S^{annual}=\\sqrt[2]{252} \\times S^{daily}$\n",
+    "* $S^{annual}=\\sqrt[2]{52} \\times S^{weekly}$\n",
+    "* $S^{annual}=\\sqrt[2]{12} \\times S^{monthly}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def sharpe_ratio(df,sample_freq='d',risk_free_rate=0.0):\n",
+    "    \n",
+    "    sr = (df - risk_free_rate).mean() / df.std()\n",
+    "    \n",
+    "    if sample_freq == 'd':\n",
+    "        sr = sr * np.sqrt(252)\n",
+    "    elif sample_freq == 'w':\n",
+    "        sr = sr * np.sqrt(52)\n",
+    "    elif sample_freq == 'm':\n",
+    "        sr = sr * np.sqrt(12)\n",
+    "    else:\n",
+    "        raise Exception('unkown sample frequency :'+str(sample_freq))\n",
+    "        \n",
+    "    return sr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLD     0.559034\n",
+       "GOOG    0.978098\n",
+       "IBM     0.174419\n",
+       "SPY     0.358931\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sharpe ratio\n",
+    "sharpe_ratio(\n",
+    "    compute_daily_returns(\n",
+    "        fill_missing_values(\n",
+    "            get_data(\n",
+    "                symbols=['GOOG','SPY','IBM','GLD'],\n",
+    "                             start='4/21/2015', \n",
+    "                             end='7/15/2016'))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "For evaluating the performance of a portfolio key factors to focus on are \n",
+    "1. __Cumulative return__ \n",
+    "2. __Average daily return__ \n",
+    "3. __Rsk__ (Standard deviation of daily return)\n",
+    "4. __Sharpe ratio__ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = fill_missing_values(get_data(symbols=['GOOG','SPY','IBM','GLD'],\n",
+    "                             start='4/21/2015', \n",
+    "                             end='7/15/2016'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLD     0.099324\n",
+       "GOOG    0.348103\n",
+       "IBM     0.017407\n",
+       "SPY     0.057167\n",
+       "Name: 2016-07-15 00:00:00, dtype: float64"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Cumulative return\n",
+    "cumulative_returns(df).ix[-1,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLD     0.000352\n",
+       "GOOG    0.001113\n",
+       "IBM     0.000155\n",
+       "SPY     0.000229\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Average daily return\n",
+    "compute_daily_returns(df).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLD     0.010003\n",
+       "GOOG    0.018065\n",
+       "IBM     0.014062\n",
+       "SPY     0.010117\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. Rsk (Standard deviation of daily return)\n",
+    "compute_daily_returns(df).std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GLD     0.559034\n",
+       "GOOG    0.978098\n",
+       "IBM     0.174419\n",
+       "SPY     0.358931\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Sharpe ratio\n",
+    "sharpe_ratio(compute_daily_returns(df))"
+   ]
   }
  ],
  "metadata": {
