--- a/3_alpha_factors.ipynb
+++ b/3_alpha_factors.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "For example, if we consider __ExxonMobil__ (ticker symbol XOM) and the index __S&P 500__ (ticker symbol SPX) we can fit a regression line through the scatter plot of the daily returns of XOM and SPX to find the linear equation that best captures its pattern, i.e.  \n",
     "\n",
-    "$Return (XOM) = beta × Return (SPX) + alpha$ \n",
+    "$Return (XOM) = beta*Return(SPX)+alpha$ \n",
     "\n",
     "\n",
     "where alpha is the Y-intercept of the regression line, and beta is its slope."
