added some context

--- a/4_1_Stock_Picking_Understand_the_Past.ipynb
+++ b/4_1_Stock_Picking_Understand_the_Past.ipynb
@@ -11,8 +11,27 @@
     "\n",
     "The answer is the\n",
     "\n",
-    "* open a long position on the security with the highest cumulative return, if the absolute value of such positive cumulative return is higher of the absolute value of the cumulative return of the security with the lowest cumulative return\n",
-    "* open a short position on the security with the lowest cumulative return, otherwise "
+    "* open a long position on the security with the highest cumulative return, if the absolute value of such positive cumulative return is higher than the absolute value of the cumulative return of the security with the lowest cumulative return\n",
+    "* open a short position on the security with the lowest cumulative return, otherwise \n",
+    "\n",
+    "It would be very easy and for this reason God decided to prevent us from predicting correctly the future. \n",
+    "Key questions are: \n",
+    "\n",
+    "* how extrapolable is the past? how much can be inferred from the past with confidence? \n",
+    "* how much are we able to detect securities for which is more difficult to predict the future? \n",
+    "\n",
+    "For the second questions, an index like sharpe ratio was born, but how good would be a strategy for stock picking based on sharpe ratio? \n",
+    "\n",
+    "\n",
+    "Let's assume as __universe the top 1500 “tradeable” stocks by 200-day average dollar volume__, capped at 30% of equities allocated to any single sector. A stock is considered “tradeable” if it meets the following criteria:\n",
+    "\n",
+    "* the stock must be the primary share class for its company.\n",
+    "* the company issuing the stock must have known market capitalization.\n",
+    "* the stock must not be a depository receipt.\n",
+    "* the stock must not be traded over the counter (OTC).\n",
+    "* the stock must not be for a limited partnership.\n",
+    "* the stock must have a known previous-day close price.\n",
+    "* the stock must have had nonzero volume on the previous trading day"
    ]
   },
   {
