added some context

--- a/4_1_Stock_Picking_Understand_the_Past.ipynb
+++ b/4_1_Stock_Picking_Understand_the_Past.ipynb
@@ -5111,7 +5111,7 @@
    "source": [
     "## Conclusions \n",
     "\n",
-    "* sharpe ratio seems good in theory but much not in practice, at least looking at the top performer; it boosts securities more not volatile than with high return\n",
+    "* sharpe ratio seems good in theory but not much in practice, at least looking at the top performer; it boosts securities more not volatile than with high return\n",
     "* a strategy for stock-picking based on sharpe-ratio would be comic  \n",
     "* a strategy for stock-picking based on cumulative return could pick volatile securities - more volatile for 1 week / less volatile for 6 months  "
    ]
