the future is not what it used to be

--- a/4_2__Stock_Picking_The_Future_is_not_what_used_to_be.ipynb
+++ b/4_2__Stock_Picking_The_Future_is_not_what_used_to_be.ipynb
@@ -71,9 +71,7 @@
     "    return df/df.ix[0,:] - 1 \n",
     "\n",
     "def sharpe_ratio(df,sample_freq='d',risk_free_rate=0.0):\n",
-    "    \n",
     "    sr = (df - risk_free_rate).mean() / df.std()\n",
-    "    \n",
     "    if sample_freq == 'd':\n",
     "        sr = sr * np.sqrt(252)\n",
     "    elif sample_freq == 'w':\n",
@@ -82,11 +80,8 @@
     "        sr = sr * np.sqrt(12)\n",
     "    else:\n",
     "        raise Exception('unkown sample frequency :'+str(sample_freq))\n",
-    "        \n",
     "    sr = sr.replace(np.inf, np.nan)\n",
-    "        \n",
-    "    return sr\n",
-    "\n",
+    "    return sr"
    ]
   },
   {
@@ -3630,15 +3625,6 @@
     "ax.legend_.remove()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
