--- a/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
+++ b/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# STOCK PICKING 3 - FORECASTING ARIMAs \n",
+    "# STOCK PICKING 3.1 - FORECASTING ARIMAs \n",
     "\n",
     "_In mental hospitals there are two kinds of people: who they think to be Napoleon and who they think they can estimate confidence in predicting stock prices_ (Gino Tesei). "
    ]
@@ -1744,7 +1744,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "arima_perf['ACTION'] = ''\n",
