--- a/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
+++ b/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
@@ -1359,7 +1359,7 @@
    },
    "outputs": [],
    "source": [
-    "#arima_perf.to_csv('arima_perf.csv')"
+    "#arima_perf.to_csv('data/arima_perf.csv')"
    ]
   },
   {
@@ -1377,7 +1377,7 @@
    },
    "outputs": [],
    "source": [
-    "arima_perf = pd.read_csv('arima_perf.csv')"
+    "arima_perf = pd.read_csv('data/arima_perf.csv')"
    ]
   },
   {
