--- a/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
+++ b/4_3_1__Stock_Picking_Predicting_The_Future_Forecasting_ARIMA.ipynb
@@ -1127,10 +1127,7 @@
     "    arima_perf.loc[sec,'ARIMA_MSE_cumulative_return_test'] = mean_squared_error(cumulative_returns_test, pred_cumulative_returns_test)\n",
     "    arima_perf.loc[sec,'ARIMA_R2_cumulative_return_test'] = r2_score(cumulative_returns_test, pred_cumulative_returns_test)\n",
     "    arima_perf.loc[sec,'ARIMA_MSE_price_test'] = mean_squared_error(test, predictions[xval_size:])\n",
-    "    arima_perf.loc[sec,'ARIMA_R2_price_test'] = r2_score(test, predictions[xval_size:])\n",
-    "    \n",
-    "    if i == 5:\n",
-    "        break "
+    "    arima_perf.loc[sec,'ARIMA_R2_price_test'] = r2_score(test, predictions[xval_size:])"
    ]
   },
   {
